--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -52,6 +52,18 @@
       align-items: center;
     }
 
+    .icons > * {
+      width: 20px;
+      height: 20px;
+    }
+
+    .settings:hover {
+      // background-color: $textActiveColor;
+      // color: white;
+      background-image: url(../attachments/settingsHover.svg);
+      background-size: 20px 20px;
+    }
+
     .icons:hover > * {
       cursor: pointer;
     }
